# tc_circuit

./: .gitignore  pyproject.toml
tc_circuit/: __init__.py  component_factory_loader.py  component_info.json  component_info.py  component_types.py  pygame_viewer.py  tc_circuit.py  tc_compiler.py  to_json.py  to_svg.py
